--- a/mvpdemo/src/main/res/values/strings.xml
+++ b/mvpdemo/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MVP Demo</string>
+    <string name="error_http">HTTP错误</string>
+    <string name="error_conn">连接错误</string>
+    <string name="error_conn_over_time">连接超时</string>
+    <string name="error_parse">解析错误</string>
+    <string name="error_unknow">未知错误</string>
+    <string name="error_server">服务器错误</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
