--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <array name="main_txt">
         <item>拍照上传</item>
         <item>沉浸式状态栏</item>
-        <item>沉浸式状态栏</item>
+        <item>greendao_demo</item>
         <item>沉浸式状态栏</item>
         <item>沉浸式状态栏</item>
     </array>
