--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
         <item>拍照上传</item>
         <item>沉浸式状态栏</item>
         <item>greendao_demo</item>
-        <item>沉浸式状态栏</item>
+        <item>自定义view练习</item>
         <item>沉浸式状态栏</item>
     </array>
 </resources>
