--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
         <item>沉浸式状态栏</item>
         <item>greendao_demo</item>
         <item>自定义view练习</item>
-        <item>沉浸式状态栏</item>
+        <item>ArouterDemo</item>
+        <item>recyclerviewDemo</item>
+        <item>沉浸式体验</item>
     </array>
 </resources>
