--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
         <item>自定义view练习</item>
         <item>ArouterDemo</item>
         <item>recyclerviewDemo</item>
-        <item>沉浸式体验</item>
+        <item>伸缩toolbar</item>
     </array>
 </resources>
