--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
         <item>ArouterDemo</item>
         <item>recyclerviewDemo</item>
         <item>伸缩toolbar</item>
+        <item>kotlin</item>
     </array>
 </resources>
