--- a/demo_view/src/main/res/values/strings.xml
+++ b/demo_view/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Demo_View</string>
+    <string name="ic_folder">&#xe09d;</string>
+    <string name="ic_games">&#xe0a5;</string>
+    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
 </resources>
