树形列表demo 完成

--- a/demo_view/src/main/res/values/strings.xml
+++ b/demo_view/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="ic_folder">&#xe09d;</string>
     <string name="ic_games">&#xe0a5;</string>
     <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
+    <string name="ic_email">&#xe087;</string>
+    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
 </resources>
