--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">开眼</string>
+
+
+    <array name="tab_bottom">
+        <item>首页</item>
+        <item>发现</item>
+        <item>热门</item>
+        <item>我的</item>
+    </array>
 </resources>
