--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
     <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
     <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
     <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>
+    <string name="nickname">yt</string>
+    <string name="view_homepage">个人主页</string>
+    <string name="collection">收藏</string>
+    <string name="comment">评论</string>
+
+    <string name="mine_message">我的消息</string>
+    <string name="mine_attention">我的关注</string>
+    <string name="mine_cache">我的缓存</string>
+    <string name="view_history">观看记录</string>
+    <string name="feedback">意见反馈</string>
 </resources>
