--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="mine_cache">我的缓存</string>
     <string name="view_history">观看记录</string>
     <string name="feedback">意见反馈</string>
+    <string name="toolbar_title">观看记录</string>
 </resources>
