--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="feedback">意见反馈</string>
     <string name="toolbar_title">观看记录</string>
     <string name="hot_title">人气榜</string>
+    <string name="cancel">取消</string>
 </resources>
