--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Day Day Study</string>
     <string name="btn_name1">拍照上传</string>
+    <string name="video_attention">+ 关注</string>
     <array name="main_txt">
         <item>拍照上传</item>
         <item>沉浸式状态栏</item>
