--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="toolbar_title">观看记录</string>
     <string name="hot_title">人气榜</string>
     <string name="cancel">取消</string>
+    <string name="video_attention">+ 关注</string>
 </resources>
