--- a/demo_kotlin/src/main/res/values/strings.xml
+++ b/demo_kotlin/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="hot_title">人气榜</string>
     <string name="cancel">取消</string>
     <string name="video_attention">+ 关注</string>
+    <string name="video_offline">缓存</string>
 </resources>
