--- a/笔记/一个月10.12.20.50.md
+++ b/笔记/一个月10.12.20.50.md
@@ -359,6 +359,8 @@ onTouch() 方法的返回值决定了 onTouchEvent() 方法要不要执行，如
 
 #事件分发机制
 
+![事件分发机制.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/%E4%BA%8B%E4%BB%B6%E5%88%86%E5%8F%91%E6%9C%BA%E5%88%B6.png?raw=true)
+
 view的分发事件是从view的`Viewgroup(Parent)#dispatchTouchEvent`到`Viewgroup(Parent)#onInterceptTouchEvent`再到`View#dispatchTouchEvent`，然后到view的`onTouchEvent`，最后又回到了`Viewgroup(Parent)#onTouchEvent`
 
 如果viewgroup不进行分发，那么`action_down`、`action_move`和`action_up`只会执行到viewgroup的`dispatchTouchEvent`，不分发的条件是`dispatchTouchEvent`直接返回true或false，true和false的区别是true会执行`action_down`、`action_move`和`action_up`，而如果直接返回false只会执行到action_down。并且后续的viewgroup的`onInterceptTouchEvent`后续方法都不会被执行到。
@@ -524,13 +526,49 @@ View的工作流程主要是指measure、layout、draw这三大流程，其中me
 
 
 #Handler机制
-##Handler机制？一个线程有几个Looper？为什么？
-一个线程只有1个Looper
+##简单描述下Handler机制？一个线程有几个Looper？为什么？
+Handler机制由MessageQueue，Message，Looper，Handler组成。
+
+Handler通过sendMessage()发送消息Message到消息队列MessageQueue。Looper通过loop()不断提取触发条件的Message，并将Message交给对应的target handler来处理。target handler调用自身的handleMessage()方法来处理Message。
+
+
+
+一个线程只有1个Looper，是通过ThreadLocal来保证的
 
 ##Handler内存泄漏的GCRoot是什么？
 
+ThreadLocal静态变量作为gcRoot，导致activity无法被回收
+
+handler的内存泄漏原因：
+
+1. 当直接在activity中声明handler时，由于后面的匿名内部类，使handler持有了activity的引用。
+2. 当任务未执行完，即message未被执行完时，message持有了messageQueue的引用。
+3. messageQueue持有了mLooper的引用。
+4. mLooper持有sThreadLocal 的引用。
+5. sThreadLocal 是一个静态变量，无法被回收，最终导致了activity无法被回收，造成了内存泄漏。
+
 ##Handler休眠是怎样的？epoll的原理是什么？如何实现延时消息，如果移除一个延时消息会解除休眠吗？
+
+Handler消息机制的休眠和唤醒是通过native层的epoll机制和pipe机制来实现的(也就是线程的休眠和唤醒)
+
+
+
+在Linux系统内核中，所有执行I/O操作的系统调用都会通过文件描述符。内核利用文件描述符来访问文件，文件描述符是非负整数。
+
+pipe是Linux中最基本的一种IPC机制，可以用来实现进程、线程间通信。
+
+pipe其本质是一个伪文件，它有两个文件描述符引用，一个表示读端，一个表示写端，规定数据从管道的写端流入管道，从读端流出。
+
+Handler机制中，底层使用pipe创建两个fd：writeFD、readFD。当线程A想唤醒线程B的时候，就可以往writeFD中写数据，这样线程B阻塞在readFD中就能返回。 也就是说，当文件描述符指向的文件（内核缓冲区）为空时，则线程进行休眠。当另一个线程向缓冲区写入内容时，则将当前线程进行唤醒。
+
+epoll机制是linux内核实现IO多路复用的一个实现。IO多路复用的意思是在一个操作里同时监听多个输入输出源，在其中一个或多个输入输出源可用的时候返回，然后对其的进行读写操作。
+
+
+
+UI线程进入Looper的无限循环之后，为什么没有ANR，是因为底层使用了Linux的epoll机制和pipe实现了线程在空闲时的休眠，并且不会占用系统CPU资源。
+
 ##Handler是怎么切换线程的,Handler同步屏障
+
 ##Binder通信
 
 
@@ -538,17 +576,12 @@ View的工作流程主要是指measure、layout、draw这三大流程，其中me
 #协程
 
 ##你对协程的理解，协程有什么作用？可以完全取代rxjava吗？协程怎么取消？协程可以在Java项目中使用吗？
-##协程的scope与context，协程的+号代表什么
 
-协程：一套基于线程而实现的上层API
-优点：异步变同步
-
-Dispatchers 调度器
-	main io default(CPU密集型任务)
-	
-withContext 切换到指定线程，并在闭包任务结束之后，继续执行下面的代码
+协程：一套基于线程而实现的上层API。优点：异步变同步
 
 suspend 挂起函数，可在挂起函数中执行子线程操作，挂起函数执行完成后，也会继续执行下面的代码
+
+##协程的scope与context，协程的+号代表什么
 
 #说说MVP和MVVM的特点
 
