--- a/笔记/一个月11.11.17.md
+++ b/笔记/一个月11.11.17.md
@@ -4,7 +4,7 @@ https://juejin.im/post/6876968255597051917#heading-15
 
 https://mp.weixin.qq.com/s?__biz=MzU2OTY0MDcwNw==&mid=2247487396&idx=1&sn=078d2387b31be9b54302bcbf84bb4270&chksm=fcfaddc8cb8d54de462fa780b6bad38b76cf1414630ea3ce45a25e5c6deadb745344cb5c76aa&mpshare=1&scene=23&srcid=11183jDL1NKD9G1Xz4EFwcTW&sharer_sharetime=1605667241424&sharer_shareid=f28cabd0a22022d9b05e071b1c1a6e0c#rd
 
-# 线程
+# 线程 O
 
 ## 自定义线程池以及线程池的工作原理
 
@@ -499,15 +499,43 @@ Proxy类的代码量被固定下来，不会因为业务的逐渐庞大而庞大
 * FLAG_ACTIVITY_CLEAR_TOP：如果目标存在，直接复用，并清除目标以上的活动，否则重建。
 * FLAG_ACTIVITY_NEW_TASK和FLAG_ACITIVTY_CLEAR_TASK = singleTask
 
-# onCreate,onResume,onStart里面，什么地方可以获得宽高
+# onCreate,onResume,onStart里面，什么地方可以获得宽高 O
 
 如果在`onCreate、onStart、onResume`中直接调用View的`getWidth/getHeight`方法，是无法得到View宽高的正确信息，因为view的measure过程与Activity的生命周期是不同步的，所以无法保证在这些生命周期里view 的measure已经完成。所以很有可能获取的宽高为0。
 
-所以主要有以下三个方法来获取view的宽高：
+有以下三个方法来获取view的宽高：
 
 - view.post()方法
 
-在该方法里的`runnable`对象，能保证view已经绘制完成，也就是执行完`measure、layout和draw`方法了。
+- onWindowFocusChanged() 
+
+  - ```
+    当 Activity 获取和失去焦点的时候
+    override fun onWindowFocusChanged(hasFocus: Boolean) {  
+        super.onWindowFocusChanged(hasFocus)
+        if (hasFocus){
+            ...
+        }
+    }
+    ```
+
+    
+
+- OnGlobalLayoutListener
+
+  - ```
+    当 View 树发生状态变化时
+    view.viewTreeObserver.addOnGlobalLayoutListener(object : ViewTreeObserver.OnGlobalLayoutListener{
+        override fun onGlobalLayout() {
+            binding.dialog.viewTreeObserver.removeOnGlobalLayoutListener(this)
+            ...
+        }
+    })
+    ```
+
+> View 在什么时间点被测量
+
+https://juejin.cn/post/6895735092438630407#heading-3
 
 > 为什么view.post可以获得宽高
 
