--- a/笔记/背.md
+++ b/笔记/背.md
@@ -1558,7 +1558,7 @@ Binder框架 是基于 C/S 架构的。由一系列的组件组成，包括 Clie
 
 ![Binder框架中个组件.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E6%A1%86%E6%9E%B6%E4%B8%AD%E4%B8%AA%E7%BB%84%E4%BB%B6.jpg?raw=true)
 
-Server通过Binder驱动在ServiceManager中注册我们的服务 ,Client通过Bindr驱动查询ServiceManager中注册的服务 ,ServiceManager通过Binder驱动返回Server的代理对象 ,Client拿到Server端的代理对象就可以进行进程间通讯了,Client和Server是开发者自己来实现，Binder驱动和ServiceManager是系统提供的。
+Server通过Binder驱动在ServiceManager中注册服务 ,Client通过Bindr驱动查询ServiceManager中注册的服务 ,ServiceManager通过Binder驱动返回Server的代理对象 ,Client拿到Server端的代理对象就可以进行进程间通讯了,Client和Server是开发者自己来实现，Binder驱动和ServiceManager是系统提供的。
 
 在Android中client不是直接去和binder打交道，client直接和Manager交互，而manager和managerProxy交互，也就是说client是通过managerProxy去和binder进行交互的。同时service也不是直接和binder交互，而是通过stub去和binder交互。
 
