--- a/笔记/背.md
+++ b/笔记/背.md
@@ -2,9 +2,9 @@ https://github.com/JsonChao/Awesome-Android-Interview/blob/master/Java%E7%9B%B8%
 
 算法：https://zhuanlan.zhihu.com/p/84230862
 
-面试题：https://juejin.cn/post/6876968255597051917#heading-13 
+面试题：https://juejin.cn/post/6876968255597051917#heading-13 https://mp.weixin.qq.com/s/CiO_T95JWA-ijKghrnCQzw?comefrom=https://blogread.cn/news/
 
-https://mp.weixin.qq.com/s/njD4f50zPEydrRcv5BZiEw https://mp.weixin.qq.com/s/CiO_T95JWA-ijKghrnCQzw?comefrom=https://blogread.cn/news/
+https://mp.weixin.qq.com/s/njD4f50zPEydrRcv5BZiEw 
 
 # Java ok
 
