--- a/笔记/背.md
+++ b/笔记/背.md
@@ -1526,6 +1526,10 @@ UI线程进入Looper的无限循环之后，为什么没有ANR，是因为底层
 
 可以起到拦截消息的作用，返回值为 `true` 表示不继续向下分发, 返回 `false` 还会向下分发, 会调用 `Handler.handleMessage()` 方法
 
+> ThreadLocal
+
+ThreadLocal用于保存线程全局变量，以方便调用。即，当前线程独有，不与其他线程共享；可在当前线程任何地方获取到该变量。
+
 ##Handler是怎么切换线程的,Handler同步屏障
 
 > 同步屏障
