--- a/笔记/背.md
+++ b/笔记/背.md
@@ -1273,6 +1273,10 @@ MeasureSpec和LayoutParams的对应关系：
 
 **View默认的onMeasure只支持EXACTLY模式，所以如果在自定义控件的时候不重写这个方法的话，也就只能使用EXACTLY模式了，控件可以响应你制定的具体的宽高值或者match_parent属性，如果我们自定义View要让他支持	wrap_content，那就必须重写onMeasure指定wrap_content时的大小**
 
+> View大小
+
+
+
 > 如何求当前Activity View的深度
 
 ```
@@ -1309,7 +1313,7 @@ getWidth()方法只能控件调用了layout方法后才能获取 getMeasuredWidt
 - onMeasure 在onMeasure里实现对子view的测量，并且根据子view的测量结果决定FlowLayout的大小。
 - onLayout 在这里对子view进行布局，决定自view的位置。
 
-思路：当前行剩余空间大于子View占用的大小时，子View往后排布；当前行剩余空间不能够容纳子View时，子View换行。依照该规则进行测量和布局。 ？
+思路：当前行剩余空间大于子View占用的大小时，子View往后排布；当前行剩余空间不能够容纳子View时，子View换行。依照该规则进行测量和布局。 
 
 ```java
 public class FlowLayout extends ViewGroup {
