--- a/笔记/新.md
+++ b/笔记/新.md
@@ -1753,7 +1753,9 @@ kotlinc编译出的class文件变大，Constant pool常量池变大
 
 ​		可以将异步变同步写法。 
 
-​		*协程挂起时不需要阻塞线程  
+​		协程挂起时不需要阻塞线程  
+
+​		比线程更轻量
 
 ​	缺点是本质是个单线程，不能利用到单个CPU的多个核
 
@@ -1782,9 +1784,11 @@ println("main: Now I can quit.")
 
 在执行计算任务时需要通过isActive检测取消状态，这样才可以取消
 
-> 使用协程时有遇到什么问题吗
+> 使用协程时有遇到什么问题吗11
 
+协程同步
 
+切换线程
 
 ##协程的scope与context
 
@@ -2037,6 +2041,10 @@ MVP中我们说过随着业务逻辑的增加，UI的改变多的情况下，会
 
 Mvvm加强了对生命周期的处理，不用像mvp一样在ondestory的时候手动处理内存泄漏
 
+MVVM解决的问题：
+
+​	接口；内存泄露(生命周期)
+
 ## MVP怎么处理内存泄漏
 
 在Activity或者Fragment关闭的时候将Presenter对View的引用释放
@@ -2064,6 +2072,10 @@ Data Binding\Lifecycles\LiveData\Navigation\Room\ViewModel
 - **不会发生内存泄漏**，observer会在LifecycleOwner状态变为DESTROYED后自动remove。
 - **不会因 Activity 停止而导致崩溃**，如果LifecycleOwner生命周期处于非活跃状态，则它不会接收任何 LiveData事件。
 - **不需要手动解除观察**，开发者不需要在onPause或onDestroy方法中解除对LiveData的观察，因为LiveData能感知生命周期状态变化，所以会自动管理所有这些操作。
+
+为啥会造成数据倒灌的问题？11
+
+
 
 > Lifecycle ：管理（如 Activity 或 Fragment）的生命周期状态的信息，并允许其他对象观察此状态。
 
