--- a/笔记/新.md
+++ b/笔记/新.md
@@ -371,8 +371,6 @@ FairSync（公平锁）
 
 Monitor：
 
-每个Java对象都带了一把Monitor锁，Monitor可以理解为一个同步工具。
-
 每个对象都存在着一个monitor与之关联，monitor可以与对象一起创建销毁或当线程试图获取对象锁时自动生成，但当一个monitor被某个线程持有后，它便处于锁定状态。在Java虚拟机中，monitor是由ObjectMonitor实现的。
 
 ObjectMonitor中有两个队列，_WaitSet和_EntryList，用来保存ObjectWaiter对象列表(每个等待锁的线程都会被封装成ObjectWaiter对象)，owner指向持有ObjectMonitor对象的线程，当多个线程同时访问一段同步代码时，首先会进入EntryList 集合，当线程获取到对象的monitor 后进入Owner 区域并把monitor中的owner变量设置为当前线程同时monitor中的计数器count加1，若线程调用wait()方法，将释放当前持有的monitor，owner变量恢复为null，count自减1，同时该线程进入WaitSet集合中等待被唤醒。若当前线程执行完毕也将释放monitor(锁)并复位变量的值，以便其他线程进入获取monitor(锁)
@@ -385,7 +383,7 @@ ObjectMonitor中有两个队列，_WaitSet和_EntryList，用来保存ObjectWait
 
 同步代码块
 
-Synchronized经过编译，会在同步块的前后分别形成monitorenter和monitorexit这个两个字节码指令。当执行monitorenter指令时，当前线程将试图获取对象锁所对应的 monitor 的持有权，若对象锁的Monitor的计数器是0，那线程可以成功取得monitor，并将计数器值设置为1，取锁成功。如果当前线程已经拥有对象锁的 monitor 的持有权，那它可以重入这个 monitor，重入时计数器的值也会加 1。倘若其他线程已经拥有对象锁的 monitor的所有权，那当前线程将被阻塞，直到正在执行线程执行完毕，即monitorexit指令被执行，执行线程将释放 monitor(锁)并设置计数器值为0 ，其他线程将有机会持有 monitor 。
+Synchronized经过编译，会在同步块的前后分别形成monitorenter和monitorexit这个两个字节码指令。当执行monitorenter指令时，当前线程将试图获取对象锁所对应的 monitor 的持有权，若对象锁的Monitor的计数器是0，那线程可以成功取得monitor，并将计数器值设置为1，取锁成功。如果当前线程已经拥有对象锁的 monitor 的持有权，那它可以重入这个 monitor，重入时计数器的值也会加 1。倘若其他线程已经拥有对象锁的 monitor的所有权，那当前线程将被阻塞，直到正在执行线程执行完毕，即monitorexit指令被执行，执行线程将释放 monitor(锁)并设置计数器值为0 ，其他线程将有机会持有 monitor 
 
 > 静态方法与普通方法加synchronized有什么区别 
 
