--- a/笔记/新.md
+++ b/笔记/新.md
@@ -662,8 +662,6 @@ Java类从加载到内存到移除，它的整个生命周期分为： https://b
 3. 准备：为类的静态变量在方法区分配内存，并初始赋值（对于一般的成员变量是在类实例化时候，随对象一起分配在堆内存中(链接)
 4. 解析：将类的二进制数据中的符号引用换成直接引用(链接)
 5. 初始化：对类的静态变量，静态代码块执行初始化操作
-6. 使用：对象实例化
-7. 卸载：GC
 
 > DexClassLoader与PathClassLoader的区别
 
@@ -677,6 +675,15 @@ Java类从加载到内存到移除，它的整个生命周期分为： https://b
 jvm对class文件采用的是按需加载的方式，当需要使用该类时，jvm才会将它的class文件加载到内存中产生class对象。
 
 在加载类的时候，是采用的`双亲委派机制`，即把请求交给父类处理的一种任务委派模式
+
+先简单介绍下双亲委托机制： 
+
+1. 首先判断该Class是否已经加载
+2. 如果没有则不是自身去查找而是委托给父加载器进行查找，这样依次的进行递归，直到委托到最顶层的ClassLoader
+3. 如果顶层 ClassLoader找到了该Class，就会直接返回
+4. 如果没找到，则继续依次向下查找，如果还没找到则最后会交由自身去查找
+
+双亲委托模式的优点就是：能有有效的确保一个类的全局唯一性
 
 > 热修复原理
 
@@ -755,7 +762,7 @@ jvm对class文件采用的是按需加载的方式，当需要使用该类时，
 
 https://juejin.cn/post/6844903876043210759#heading-8
 
-使用库，比较出名的就是`LeakCanary`，导入库，然后运行后，就可以发现app内的内存泄漏情况。 文件名称：.hprof
+使用LeakCanary 文件名称：hprof
 
 1.5.4 不监测 Fragment 的泄露的。而 2.0版本提供了对Android O以及androidx版本中的 Fragment 的内存泄露检测，并且2.0用了kotlin重写，新版本不用手动初始化。
 
@@ -845,6 +852,46 @@ public class Singleton {
 BaseActivity
 
 > build建造者模式
+
+将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示
+
+```
+public class Computer {
+    private String mCPU;
+    public void setCPU(String CPU) {
+        mCPU = CPU;
+    }
+
+    public class ConcreteBuilder {
+        //创建产品实例
+        private Computer mComputer = new Computer();
+
+        @Override
+        public void buildCPU(String cpu) {//组装CPU
+            mComputer.setCPU(cpu);
+        }
+        @Override
+        public Computer create() {//返回组装好的电脑
+            return mComputer;
+        }
+    }
+}
+
+public class Director {
+    private Builder mBuild = null;
+
+    public Director(Builder build) {
+        this.mBuild = build;
+    }
+
+    //指挥装机人员组装电脑
+    public void Construct(String cpu, String memory, String hd) {
+        mBuild.buildCPU(cpu);
+        mBuild.buildMemory(memory);
+        mBuild.buildHD(hd);
+    }
+}
+```
 
 ##android中用到的观察者模式有哪些地方
 
