--- a/笔记/新.md
+++ b/笔记/新.md
@@ -893,6 +893,12 @@ public class Director {
 }
 ```
 
+封装性良好，隐藏内部构建细节。
+
+易于解耦，将产品本身与产品创建过程进行解耦，可以使用相同的创建过程来得到不同的产品。也就说细节依赖抽象。
+
+易于扩展，具体的建造者类之间相互独立，增加新的具体建造者无需修改原有类库的代码。
+
 ##android中用到的观察者模式有哪些地方
 
 定义对象间一种一对多的依赖关系，使得每当一个对象改变状态，则所有依赖于它的对象都会得到通知并被自动更新
@@ -1656,10 +1662,6 @@ ThreadLocal用于保存线程全局变量，当前线程独有，不与其他线
 
 Thread持有ThreadLocalMap，而且ThreadLocalMap里对ThreadLocal的引用还是弱引用，所以只要Thread对象可以被回收，那么ThreadLocalMap就能被回收
 
-> 为什么不推荐使用线程池
-
-如果在线程池中使用ThreadLocal可能会导致内存泄漏，原因是线程池中线程的存活时间太长，往往和程序都是同生共死的，这就意味着Thread持有的ThreadLocalMap一直都不会被回收，再加上ThreadLocalMap中的Entry对ThreadLocal是弱引用，所以只要ThreadLocal结束了自己的生命周期是可以被回收掉的。但是Entry中的Value却是被Entry强引用的，所以即便Value的生命周期结束了，Value也是无法被回收的，从而导致内存泄漏
-
 ##Handler发送消息的 Delay 可靠吗？
 
 答案是不靠谱的，引起不靠谱的原因有如下
@@ -1717,7 +1719,7 @@ https://www.jianshu.com/p/66fa1a8396ad
 
 >为什么我们能在主线程直接使用 Handler，而不需要创建 Looper
 
-通常我们认为 ActivityThread 就是主线程。事实上它并不是一个线程，而是主线程操作的管理者。在  ActivityThread.main() 方法中调用了 Looper.prepareMainLooper() 方法创建了 主线程的  Looper ,并且调用了 loop() 方法，所以我们就可以直接使用 Handler 了。
+在ActivityThread.main() 方法中调用了 Looper.prepareMainLooper() 方法创建了 主线程的  Looper ,并且调用了 loop() 方法，所以我们就可以直接使用 Handler 了。
 
 > 主线程的死循环一直运行是不是特别消耗CPU资源呢？
 
