--- a/笔记/新.md
+++ b/笔记/新.md
@@ -2551,7 +2551,7 @@ public class UnitTestSample {
 
 ##Http概念
 
-Http：超文本传输协议.Http协议是以明文方式发送信息的
+Http：超文本传输协议.采用c/s架构，使用的是TCP服务，是一个无状态协议（服务器不记录客户端的历史行为）
 
 ##Https概念
 
@@ -2760,7 +2760,4 @@ another_id(对方用户id)
 
 4. 删除聊天列表
 
-将该用户的聊天列表删除状态改为删除       
-
-
-
+将该用户的聊天列表删除状态改为删除 
