--- a/笔记/新.md
+++ b/笔记/新.md
@@ -6,6 +6,15 @@ https://github.com/JsonChao/Awesome-Android-Interview/blob/master/Java%E7%9B%B8%
 
 https://mp.weixin.qq.com/s/njD4f50zPEydrRcv5BZiEw 
 
+
+
+https://juejin.cn/post/6844903805683761165
+https://juejin.cn/post/6844903670933356551#comment
+https://juejin.cn/post/6895735092438630407#heading-2
+https://juejin.cn/post/6844904116561379341#comment
+二分法
+缓存拦截器
+
 # Java ok
 
 ## equals和hashcode，他们为何必须一起重写？hashcode方法重写规则
@@ -754,30 +763,6 @@ jvm对class文件采用的是按需加载的方式，当需要使用该类时，
    1. 可用内存小
 3. 标记-整理算法：标记过程与标记-清除算法一样，接下来让所有存活的对象都向一端移动，然后直接清理掉端边界以外的内存
    1. 仍需要进行局部对象移动，一定程度上降低了效率
-
-# 内存泄漏 Ok
-
-> 什么时候会发生内存泄漏
-
-- 单例/静态变量造成的内存泄漏
-- 匿名内部类/非静态内部类
-- 资源未关闭造成的内存泄漏
-
-> 如何分析解决
-
-https://juejin.cn/post/6844903876043210759#heading-8
-
-使用LeakCanary 文件名称：hprof
-
-1.5.4 不监测 Fragment 的泄露的。而 2.0版本提供了对Android O以及androidx版本中的 Fragment 的内存泄露检测，并且2.0用了kotlin重写，新版本不用手动初始化。
-
-原理： 被GC回收的对象引用，会保存在队列 `queue` 中 
-
-在一个Activity执行完onDestroy()之后，将它放入WeakReference中，然后将这个WeakReference类型的Activity对象与ReferenceQueque关联。这时再从ReferenceQueque中查看是否有该对象，如果没有，执行gc，再次查看，还是没有的话则判断发生内存泄露了。最后用HAHA这个开源库去分析dump之后的heap内存。
-
-为啥还要进行一次gc:
-
-可能存在被观察的引用将要变得弱可达，但是还未入队引用队列的情况。这时候应该主动调用一次 GC，可能可以避免一次额外的 heap dump
 
 #编译期注解处理的是字节码还是java文件 Ok
 
@@ -2038,25 +2023,12 @@ launch(newSingleThreadContext("MyOwnThread")) { // 开新的线程
 
 # 性能优化 ok
 
-> 原理
-
-https://juejin.cn/post/6916531888576266254#comment
-
-* UI线程卡顿检测原理：
-  对 UI 线程的 Looper 里面处理 Message 的过程进行监控。
-  具体做法是，在 Looper 开始处理 Message 前，在异步线程开启一个延时任务，用于后续收集信息。如果这个 Message 在指定的时间段内完成了处理，那么在这个 Message 被处理完后，就取消之前的延时任务，说明 UI 线程没有 block 。如果在指定的时间段内没有完成任务，说明 UI 线程有 block 。此时，异步线程可以执行刚才的延时任务。如果我们在这个延时任务里面打印 UI 线程的方法调用栈，就可以知道 UI 线程在做什么了。这个就是 UI  线程 block 检测的基本原理。
-
-* FPS 检测的原理：
-  利用了 Android 的屏幕绘制原理
-  系统每隔 16 ms 就会发送一个 VSync 信号。 如果应用注册了这个 VSync 信号，就会在 VSync  信号到来的时候，收到回调，从而开始准备绘制。如果准备顺利，也就是 CPU 准备数据、GPU 栅格化等，如果这些任务在 16 ms 之内完成，那么下一个 VSync 信号到来前就可以绘制这一帧界面了。就没有掉帧，界面很流畅。如果在 16 ms 内没准备好，可能就需要更多的时间这个画面才能显示出来，在这种情况下就发生了丢帧，如果丢帧很多就卡顿了。
-  检测 FPS 的原理其实挺简单的，就是通过一段时间内，比如 1s，统计绘制了多少个画面，就可以计算出 FPS 了。那如何知道应用 1s 内绘制了多少个界面呢？这个就要靠 VSync 信号监听了。 
-
 ## 启动优化
 
 Application中的三方SDK进行异步初始化(协程/线程池)，有些SDK优先级并不是那么高，可以结合idealHandler进行延迟初始化做了一个更优的延迟初始化的方案，利用它可以在主线程的空闲时间进行初始化，以减少启动耗时导致的卡顿现象(环信、视频延迟初始。广告ID，facebook事件记录采用线程空闲初始化)
 
-1. 延迟初始化是在页面界面显示之后才去进行加载，但是如果此时界面需要进行滑动等与用户交互的一系列操作，就会有很严重的卡顿现象，所以使用idealHandler在线程空闲的时候进行初始化
-2. 给闪屏页设置主题背景，防止启动白屏
+1. 给闪屏页设置主题背景，防止启动白屏
+2. 延迟初始化是在页面界面显示之后才去进行加载，但是如果此时界面需要进行滑动等与用户交互的一系列操作，就会有很严重的卡顿现象，所以使用idealHandler在线程空闲的时候进行初始化
 
 ## 包大小优化
 
@@ -2080,20 +2052,71 @@ lib,dex,res占用了超90%的空间，这三个是优化的重点
 
 ## 内存优化
 
-> 内存抖动是由于短时间内有大量对象进出新生区导致的，它伴随着频繁的GC，gc会大量占用ui线程和cpu资源，会导致app整体卡顿。
+主要是针对这3个问题优化
 
-避免发生内存抖动的几点建议：
+1. 内存抖动
+   1.  内存波动图形呈 锯齿、GC导致卡顿
+2. 内存泄漏：对象被持有导致无法释放或不能按照对象正常的生命周期进行释放
+3. 内存溢出
 
-- 尽量避免在循环体内创建对象，应该把对象创建移到循环体外。
-- 注意自定义View的onDraw()方法会被频繁调用，所以在这里面不应该频繁的创建对象。
-- 当需要大量使用Bitmap的时候，试着把它们缓存在数组或容器中实现复用。
-- 对于能够复用的对象，同理可以使用对象池将它们缓存起来。
+> 内存抖动
+
+当内存频繁分配和回收，导致内存不稳定，就会出现内存抖动，它通常表现为频繁GC、内存曲线呈锯齿状。通常会导致 页面卡顿，甚至造成 OOM
+
+那么，为什么内存抖动会导致 OOM？主要原因有如下两点：频繁创建对象，导致内存不足及碎片（不连续）。不连续的内存片无法被分配，导致OOM。
+内存抖动常见案例：着重查看循环或频繁被调用的地方
+
+1. 字符串使用加号拼接
+   1. 使用StringBuilder替代。
+
+2. 资源复用
+   1. 使用缓存池，重用频繁申请和释放的对象
+   2. 注意 结束 使用后，需要 手动释放对象池中的对象。
+
+3. 减少不合理的对象创建
+   1. 避免在循环中不断创建局部变量
+   2. ondraw、getView 中创建的对象尽量进行复用
+
+4. 使用合理的数据结构
+   1. 使用 SparseArray类族、ArrayMap 来替代 HashMap。
 
 > 内存泄露
 
-使用LeakCanrary
+什么时候会发生内存泄漏
+
+- 单例/静态变量造成的内存泄漏
+- 匿名内部类/非静态内部类
+- 资源未关闭造成的内存泄漏
+
+如何分析解决
+
+https://juejin.cn/post/6844903876043210759#heading-8
+
+使用LeakCanary 文件名称：hprof
+
+1.5.4 不监测 Fragment 的泄露的。而 2.0版本提供了对Android O以及androidx版本中的 Fragment 的内存泄露检测，并且2.0用了kotlin重写，新版本不用手动初始化。
+
+原理： 被GC回收的对象引用，会保存在队列 `queue` 中 
+
+在一个Activity执行完onDestroy()之后，将它放入WeakReference中，然后将这个WeakReference类型的Activity对象与ReferenceQueque关联。这时再从ReferenceQueque中查看是否有该对象，如果没有，执行gc，再次查看，还是没有的话则判断发生内存泄露了。最后用HAHA这个开源库去分析dump之后的heap内存。
+
+为啥还要进行一次gc:
+
+可能存在被观察的引用将要变得弱可达，但是还未入队引用队列的情况。这时候应该主动调用一次 GC，可能可以避免一次额外的 heap dump
 
 ##卡顿优化
+
+> UI线程卡顿检测原理：
+
+在loop方法里，每个message处理前后都会调用Logging对象，主线程发生了卡顿，那一定是在dispatchMessage()方法中执行了耗时操作。那么，我们就可以通过这个mLogging对象对dispatchMessage()进行监控。
+
+1、首先，我们需要使用getMainLooper().setMessageLogging()去设置我们自己的Printer实现类去打印输出logging。这样，在每个message执行的之前和之后都会调用我们设置的这个Printer实现类。
+2、如果我们匹配到"Dispatching to"之后，在子线程去执行一个任务获取当前主线程的堆栈信息以及当前的一些场景信息
+3、如果在指定的阈值之内匹配到了"Finished to "，那么说明message就被执行完成了，则表明此时没有产生我们认为的卡顿效果，那我们就可以将这个子线程任务取消掉。
+
+问题：卡顿检测方案获取卡顿时的堆栈信息是最后的时刻，但是实际上发生卡顿的时刻可能是在这段时间区域内另一个耗时过长的函数，那么可能在我们捕获卡顿的时刻时，真正的卡顿时机已经执行完成了，所以在T2时刻捕获到的一个卡顿信息并不能够反映卡顿的现场。解决方法：获取卡顿周期内的多个堆栈
+
+工具：
 
 1.使用严格模式 StrictMode
 
@@ -2106,9 +2129,56 @@ lib,dex,res占用了超90%的空间，这三个是优化的重点
 
 2.Android Studio Profiler https://www.jianshu.com/p/a3d91986b4c7
 
+## 网络优化
+
+> 1数据缓存
+
+1.1 设置okHttp 缓存
+
+1.2 过期时间与增量更新
+
+过期时间
+在服务端返回的数据中加上一个过期时间，这样我们每次请求的时候判断一下有没有过期，如果没有过期就不需要去重新请求。
+
+增量更新
+数据增量更新的具体思路，就是在数据中加上一个版本的概念，每次接收数据都进行版本对比，只接收有变化的数据。
+这样传输的数据量就会减少很多，比如省市区和配置等数据比较少更新，如果每次都要请求省市区的数据，这就是在浪费流量。
+
+> 2数据压缩
+
+1. Gzip
+对于 Post 请求，Body 是用 Gzip 压缩的，也就是请求的时候带上 Gzip 请求头，服务端返回的时候也加上 Gzip 压缩，这样数据流就是被压缩过的。
+2. 压缩请求头
+请求头也占用一定的体积，在请求头不变的情况下，我们可以只传递一次，以后都只需要传递上一次请求头的 MD5 值，服务端做一个缓存，在需要请求头中的某些信息时，就可以直接从之前的缓存中取。
+3. 合并网络请求
+每一个网络请求都会有冗余信息，比如请求头，而合并网络请求就可以减少冗余信息的传递；
+4.3 图片压缩
+1. 缩略图
+图片压缩的第一个手段，就是在列表中优先使用缩略图，因为展示原图会加大内存消耗和流量消耗，而且在列表中直接展示原图没有意义。
+
+> 3 DNS优化
+
+DNS 被劫持的结果就是用户得到的数据并不是我们真实想要提供给用户的数据，如果 DNS 解析慢，那用户等待的请求时间就会变长。
+通过使用 HttpDNS，绕过运营商域名解析过程，HttpDNS 不是使用传统的 DNS 协议，向 DNS 服务器的 53 端口发送请求，而是使用 Http 协议，向服务器的 80 端口发送请求。
+这样做的好处有两个：
+
+​	防劫持：降低 Local DNS 劫持，绕过运营商域名解析过程；
+
+
+​	提升速度：降低平均访问时长，因为节省了一次解析过程；
+
+##FPS 检测的原理：
+利用了 Android 的屏幕绘制原理
+系统每隔 16 ms 就会发送一个 VSync 信号。 如果应用注册了这个 VSync 信号，就会在 VSync  信号到来的时候，收到回调，从而开始准备绘制。如果准备顺利，也就是 CPU 准备数据、GPU 栅格化等，如果这些任务在 16 ms 之内完成，那么下一个 VSync 信号到来前就可以绘制这一帧界面了。就没有掉帧，界面很流畅。如果在 16 ms 内没准备好，可能就需要更多的时间这个画面才能显示出来，在这种情况下就发生了丢帧，如果丢帧很多就卡顿了。
+检测 FPS 的原理其实挺简单的，就是通过一段时间内，比如 1s，统计绘制了多少个画面，就可以计算出 FPS 了。那如何知道应用 1s 内绘制了多少个界面呢？这个就要靠 VSync 信号监听了。 
+
 ## 稳定性优化
 
+应用的稳定性可以分为三个纬度，如下所示：
 
+1、Crash纬度
+2、性能纬度：启动速度、内存、绘制等等优化方向，相对于Crash来说是次要的，在做应用性能体系化建设之前，我们必须要确保应用的功能稳定可用。
+3、业务高可用纬度：它是非常关键的一步，我们需要采用多种手段来保证我们App的主流程以及核心路径的稳定性，只有用户经常使用我们的App，它才有可能发现别的方面的问题
 
 # 图片相关 ok
 
@@ -2206,9 +2276,9 @@ MDPI：HDPI:XHDPI:XXHDPI:XXXHDPI = 1:1.5:2:3:4
 
 > 适配方案
 
-1. 宽高限定适配：简单说，就是穷举市面上所有的Android手机的宽高像素值：设定一个基准的分辨率，其他分辨率都根据这个基准分辨率来计算，在不同的尺寸文件夹内部，根据该尺寸编写对应的dimens文件，这个时候，如果我们的UI设计界面使用的就是基准分辨率，那么我们就可以按照设计稿上的尺寸填写相对应的dimens引用了,而当APP运行在不同分辨率的手机中时，这些系统会根据这些dimens引用去该分辨率的文件夹下面寻找对应的值。
+1. 宽高限定适配：穷举市面上所有的Android手机的宽高像素值：设定一个基准的分辨率，其他分辨率都根据这个基准分辨率来计算，根据该尺寸编写对应的dimens文件，这个时候，如果我们的UI设计使用的就是基准分辨率,当APP运行在不同分辨率的手机中时，这些系统会根据这些dimens引用去该分辨率的文件夹下面寻找对应的值。
 
-   1. 有些分辨率没有被覆盖到就会只用默认的尺寸，而使用默认的尺寸的话，UI就很可能变形，简单说，就是容错机制很差。
+   1. 无法做到向下兼容去使用更小的dimens，只能使用默认的dimens,容错机制差
 
    2. res文件增大
 
@@ -2224,7 +2294,7 @@ MDPI：HDPI:XHDPI:XXHDPI:XXXHDPI = 1:1.5:2:3:4
 
       * x2=(480/320)*2=3px
 
-2. 最小宽度限定符适配方案：Android会识别屏幕可用高度和宽度的最小尺寸的dp值（其实就是手机的宽度值），然后根据识别到的结果去资源文件中寻找对应限定符的文件夹下的资源文件。
+2. 最小宽度限定符适配方案：系统会识别设备屏幕的最小宽度并根据识别到的结果去资源文件中寻找对应限定符的文件夹下的资源文件，解决了向下兼容问题
 
    1. 最小宽度是宽高限定的升级版，最小宽度只是把dimens.xml文件中的值从px换成了dp，原理和使用方式都是没变的。开发者先根据设计图最小宽度生成一系列dimens文件夹，当把项目运行到设备上时，系统会根据当前设备屏幕的最小宽度去匹配对应的dimen文件夹。
 
