--- a/笔记/新.md
+++ b/笔记/新.md
@@ -552,7 +552,19 @@ HashMap的长度为2的幂次方的原因是为了减少Hash碰撞，尽量使Ha
 
 > HashMap为啥线程不安全
 
-当有多个线程共同操作hashMap的put方法时，这个时候hashMap容量不够了，两个线程都去扩容执行resize方法，在这个时候cpu切换资源的话，会造成链表成环问题，死循环问题。头插法-尾插法
+当有多个线程共同操作hashMap的put方法时，这个时候hashMap容量不够了，两个线程都去扩容执行resize方法，在这个时候cpu切换资源的话，会造成链表成环问题，死循环问题。
+
+> HashMap 1.7和1.8区别 71 82
+
+1. 扩容
+   1. 头插法 ：采用头插法时会容易出现逆序且环形链表死循环问题：先将原位置的数据移到后1位，在插入数据到该位置，会出现环形列表问题
+   2. 尾插法：可以避免：直接插入到链表尾部
+2. 数据结构
+   1. 数组+链表
+   2. 数组+链表+红黑树
+3. put方法
+   1. 先扩容后插入新值
+   2. 先插值再扩容 一般别说这个，不知道为啥
 
 http://www.louisvv.com/archives/2487.html 
 
@@ -697,6 +709,16 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
 4. 如果没找到，则继续依次向下查找，如果还没找到则最后会交由自身去查找
 
 双亲委托模式的优点就是：能有有效的确保一个类的全局唯一性
+
+为什么使用双亲委托机制？
+
+避免重复加载，如果已经加载过一次Class，就不需要再次加载，而是先从缓存中直接读取。
+安全方面的考虑，如果不使用双亲委托模式，就可以自定义一个String类来替代系统的String类，这样便会造成安全隐患，采用双亲委托模式会使得系统的String类在Java虚拟机启动时就被加载，也就无法自定义String类来替代系统的String类。
+
+由不同的类加载器加载的类会被JVM当成同一个类吗？
+不会。
+在Java中，我们用包名+类名作为一个类的标识。
+但在JVM中，一个类用其包名+类名和一个ClassLoader的实例作为唯一标识，不同类加载器加载的类将被置于不同的命名空间
 
 > 热修复原理
 
@@ -985,10 +1007,6 @@ eg:ListView/RecyclerView的Adapter的notifyDataSetChanged方法、广播
 	    }
 	}
 
-3.CGLib代理
-
-使用动态代理必须实现接口，使用CGLib代理对象则无需实现接口
-
 >代理模式与装饰模式的区别
 
 装饰模式和静态代理代码基本是一样的。
@@ -1183,7 +1201,7 @@ https://juejin.cn/post/6844904116561379341#comment
 
 > APP启动流程
 
-1. Launcher进程通过binder机制请求AMS启动Activity ？
+1. Launcher进程请求AMS启动Activity ？
 2. AMS接收到请求后通过ActivityStarter解析Intent和Flag，在通过ActivityStack为Activity配置信息。并判断是否需要创建应用进程。
 3. 然后AMS通过socket调用到`Zygote`，fork新的app进程
 4. 创建应用进程
@@ -1352,6 +1370,8 @@ View事件分发是通过遍历view树，将MotionEvent分发给最终View的过
 6、View的enable属性不影响onTouchEvent的默认返回值。
 
 7、通过requestDisallowInterceptTouchEvent方法可以在子元素中干预父元素的事件分发过程，但是ACTION_DOWN事件除外。
+
+8、requestDisallowInterceptTouchEvent 设置 true就不会走 onInterceptTouchEvent(ev) 方法
 
 > 高深:
 
@@ -1671,7 +1691,7 @@ public class FlowLayout extends ViewGroup {
 
 ##简单描述下Handler机制？一个线程有几个Looper？为什么？
 
-Handler机制由MessageQueue，Message，Looper，Handler组成。Handler的主要作用是发送和处理消息；MessageQueue称作消息队列，采用单链表的数据结构存储Message；Looper是一个循环，会在一个无限循环中不断从MessageQueue中获取Message，如果有Message，就交给对应的Handler去处理；Message是传递的消息，它的target参数持有是发送它的Handler对象。Handler通过sendMessage()发送消息Message到消息队列MessageQueue。Looper通过loop()不断提取触发条件的Message，并将Message交给对应target的handler来处理。handler调用自身的handleMessage()方法来处理Message。
+Handler机制由MessageQueue，Message，Looper，Handler组成。Handler的主要作用是发送和处理消息；MessageQueue称作消息队列，采用单链表的数据结构存储Message；Looper是一个循环，会在一个无限循环中不断从MessageQueue中获取Message，如果有Message，就交给对应的Handler去处理；Message是传递的消息，它的target参数持有是发送它的Handler对象。
 
 - 1、Handler通过sendMessage()发送消息Message到消息队列MessageQueue。（发送消息的最终方法是sendMessageAtTime）
 - 2、Looper通过loop()不断提取触发条件的Message，并将Message交给对应的target handler来处理。
@@ -1762,7 +1782,22 @@ UI线程进入Looper的无限循环之后，为什么没有ANR，是因为底层
 
 >主线程的Looper何时退出
 
-在App退出时，ActivityThread中的mH（Handler）收到消息后，执行退出
+在App退出时，ActivityThread中的mH（Handler）收到消息后，执行退出 主线程looper设置的是不退出，所以只有程序退出时才会退出
+
+> Handler如何保证MessageQueue并发访问安全？
+
+答：循环加锁，配合阻塞唤醒机制。
+
+```
+for (;;) {
+ ...
+ nativePollOnce(ptr, nextPollTimeoutMillis);
+ synchronized (this) {
+ ...
+ }
+```
+
+MessageQueue其实是“生产者-消费者”模型，Handler不断地放入消息，Looper不断地取出，这就涉及到死锁问题。如果Looper拿到锁，但是队列中没有消息，就会一直等待，而Handler需要把消息放进去，锁却被Looper拿着无法入队，这就造成了死锁。Handler机制的解决方法是循环加锁,他的等待是在锁外的，当队列中没有消息的时候，他会先释放锁，再进行等待，直到被唤醒。这样就不会造成死锁问题了
 
 ##如何处理Handler使用不当造成的内存泄漏？
 
@@ -1787,6 +1822,8 @@ Handler中的Message可以分为两类：同步消息，异步消息，一般我
 Handler设置同步屏障之后，Looper只会获取和处理异步消息，如果没有异步消息会进入阻塞状态。
 
 同步屏障的设置可以方便地处理那些优先级较高的异步消息。当我们调用`Handler.getLooper().getQueue().postSyncBarrier()` 并设置消息的`setAsynchronous(true)`时，target 即为 null ，也就开启了同步屏障。当在消息轮询器 Looper 在`loop()`中循环处理消息时，如若开启了同步屏障，会优先处理其中的异步消息，而阻碍同步消息。
+
+同步屏障只能手动移除
 
 >Handler线程切换
 
@@ -1829,8 +1866,6 @@ Binder IPC机制是基于内存映射（mmap）来实现的，传统的进程通
 3. 发送方进程通过系统调用 copyfromuser() 将数据 copy 到内核中的内核缓存区，由于内核缓存区和接收进程的用户空间存在内存映射，因此也就相当于把数据发送到了接收进程的用户空间，这样便完成了一次进程间的通信。 如下图：
 
 ![Binder通信流程.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E9%80%9A%E4%BF%A1%E6%B5%81%E7%A8%8B.jpg?raw=true)
-
-> 
 
 ##binder是cs架构，Server端的binder都是运行在同一个线程里面么
 
@@ -2037,7 +2072,7 @@ launch(newSingleThreadContext("MyOwnThread")) { // 开新的线程
 
 Application中的三方SDK进行异步初始化(协程/线程池)，有些SDK优先级并不是那么高，可以结合idealHandler进行延迟初始化做了一个更优的延迟初始化的方案，利用它可以在主线程的空闲时间进行初始化，以减少启动耗时导致的卡顿现象(环信、视频延迟初始。广告ID，facebook事件记录采用线程空闲初始化)
 
-1. 给闪屏页设置主题背景，防止启动白屏
+1. 设置splash页，给闪屏页设置主题背景，防止启动白屏
 2. 延迟初始化是在页面界面显示之后才去进行加载，但是如果此时界面需要进行滑动等与用户交互的一系列操作，就会有很严重的卡顿现象，所以使用idealHandler在线程空闲的时候进行初始化
 
 ## 包大小优化
@@ -2055,7 +2090,7 @@ lib,dex,res占用了超90%的空间，这三个是优化的重点
 2. dex优化
    1. 使用ProGuard来对代码进行混淆、优化、压缩等工作
    2. 去除重复或者不用的代码，慎用第三方库，选用体积小的第三方SDK
-3. lib:只留armv7和armv8，剩下的删除(v7兼armeabi)
+3. lib:只留armv7和armeabi，剩下的删除(v7兼armeabi)
 4. 将帧动画转为lottie动画，因为帧动画贼占资源
 5. 通过分离应用中比较独立的模块，然后以插件的形式进行加载
 6. 随着资源的增加R.class也会变大，代码中访问资源是通过R.xx.xx，而R.xx.xx对应的是.arsc中一个常量值。因此可以通过使用ID替换R.xx.xx，这样R.class文件就没有作用了，然后可以删除。工具（https://github.com/meili/ThinRPlugin）
@@ -2207,7 +2242,7 @@ RGB_565 每个像素占用2byte内存
 
 1、要选择合适的图片规格（bitmap类型）：
 
-3、使用弱引用(内存不够的时候才会回收掉)
+3、使用软引用(内存不够的时候才会回收掉)
 
 4、使用recycle()方法及时回收内存。
 
@@ -2360,6 +2395,8 @@ MVVM:
 
 MVP中我们说过随着业务逻辑的增加，UI的改变多的情况下，会有非常多的跟UI相关的接口，这样就会造成View的接口会很庞大。而MVVM就解决了这个问题，通过双向绑定的机制，实现数据和UI内容，只要想改其中一方，另一方都能够及时更新的一种设计理念，这样就省去了很多在View层中写很多case的情况，只需要改变数据就行。
 
+MVVM架构通过ViewModel隔离了UI层和业务逻辑层，降低程序的耦合度。通过DataBinding实现View和ViewModel之间的绑定
+
 Mvvm加强了对生命周期的处理，不用像mvp一样在ondestory的时候手动处理内存泄漏
 
 MVVM解决的问题：
@@ -2379,51 +2416,19 @@ public void detachView() {//解除关联
 }
 ```
 
+## 架构设计的目的
+
+通过设计使程序模块化，做到模块内部的高聚合和模块之间的低耦合。这样做的好处是使得程序在开发的过程中，开发人员只需要专注于一点，提高程序开发的效率，并且更容易进行后续的测试以及定位问题。但设计不能违背目的，对于不同量级的工程，具体架构的实现方式必然是不同的，切忌犯为了设计而设计，为了架构而架构的毛病
+
 # JetPack组件
 
 ## 用过的组件有哪些
 
 Data Binding\Lifecycles\LiveData\Navigation\Room\ViewModel
 
-> ViewModel 用来管理数据，它同样具有感知生命周期的能力，在宿主没有被销毁之前，数据不会丢失，且ViewModel不会重新创建，比如旋转屏幕等。
+##ViewModel 用来管理数据
 
-ViewModel 以注重生命周期的方式存储和管理界面相关的数据。(作用)
-
-ViewModel 类让数据可在发生屏幕旋转等配置更改后继续留存。(特点)
-
-> LiveData：是一种可观察的数据存储器类。LiveData 具有生命周期感知能力，如 Activity、Fragment 的生命周期。这种感知能力可确保 LiveData 仅更新处于活跃生命周期状态的应用组件观察者。LiveData 分为可变值的MutableLiveData和不可变值的LiveData
-
-- **确保界面符合数据状态**，当生命周期状态变化时，LiveData通知Observer，可以在observer中更新界面。观察者可以在生命周期状态更改时刷新界面，而不是在每次数据变化时刷新界面。
-- **不会发生内存泄漏**，observer会在LifecycleOwner状态变为DESTROYED后自动remove。
-- **不会因 Activity 停止而导致崩溃**，如果LifecycleOwner生命周期处于非活跃状态，则它不会接收任何 LiveData事件。
-- **不需要手动解除观察**，开发者不需要在onPause或onDestroy方法中解除对LiveData的观察，因为LiveData能感知生命周期状态变化，所以会自动管理所有这些操作。
-
-> Lifecycle ：管理（如 Activity 或 Fragment）的生命周期状态的信息，并允许其他对象观察此状态。
-
-> DataBinding https://juejin.cn/post/6844904191656214536
->
-
-优点
-
-* 不用再 findViewById 了(当然kotlin也可以不用喽)
-* 减少了 Avtivity和Fragment的逻辑处理，使Activity 和Fragment逻辑更加清晰，容易维护
-* 双向绑定，当View改变的时候会通知Model，当Model改变的时候会通知View
-
-缺点
-
-* 很难定位bug，当有个界面展示不对的时候，你不知道是View的问题，还是Model的问题，还是编写逻辑的问题，
-* xml中 不能Debug
-* 双向绑定技术，不利于View的复用，因为一个xml 里面绑定的一个Model，有可能另一个界面Model就不一样了，所以无法复用了。除非你再手动转一下这个Model
-
-##lifeCycle的原理是什么？如果在onStart里面订阅，会回调onCreate吗？（继续背4）
-
-会
-
-http://liuwangshu.cn/application/jetpack/3-lifecycle-theory.html
-
-创建一个不可见的ReportFragment添加到Activity，然后分发生命周期到订阅的对象。实现LifecycleObserver接口的类中，注解修饰的方法和事件会被保存起来，然后在生命周期发生改变的时候再找到对应 Event 的方法，通过反射对事件的对应方法进行调用，。
-
-##ViewModel（继续背5）
+ViewModel 以注重生命周期的方式存储和管理界面相关的数据。在发生屏幕旋转等配置更改后数据继续留存
 
 原理：通过注入一个retainInstance 为 true 的 HolderFragment ，利用 Fragment 的特性来保证在 Activity 配置改变后依然能够存活一下，并且保证了 HolderFragment 内部的 ViewModelStore 的存活，最终保证了 ViewModelStore 内部储存的 ViewModel 缓存存活，从而实现了 ViewModel 的生命周期这个特点功能
 
@@ -2443,9 +2448,16 @@ https://juejin.cn/post/6844904079265644551#comment
 
 > viewModel怎么实现自动处理生命周期
 
+##LiveData
 
+是一种可观察的数据存储器类。LiveData 具有生命周期感知能力，这种感知能力可确保 LiveData 仅更新处于活跃生命周期状态的应用组件观察者。LiveData 分为可变值的MutableLiveData和不可变值的LiveData
 
-## LiveData数据倒灌
+- 确保界面符合数据状态，当生命周期状态变化时，LiveData通知Observer，可以在observer中更新界面。观察者可以在生命周期状态更改时刷新界面，而不是在每次数据变化时刷新界面。
+- 不会发生内存泄漏，observer会在LifecycleOwner状态变为DESTROYED后自动remove。
+- 不会因 Activity 停止而导致崩溃，如果LifecycleOwner生命周期处于非活跃状态，则它不会接收任何 LiveData事件。
+- 不需要手动解除观察，开发者不需要在onPause或onDestroy方法中解除对LiveData的观察，因为LiveData能感知生命周期状态变化，所以会自动管理所有这些操作。
+
+> LiveData数据倒灌
 
 现象：多个Fragment共享一个ViewModel中设置了一个LiveData，FragmentA observe到这个LiveData的一次通知，关闭 FragmentA 后，再进入 FragmentA，由于 该 ViewModel 是共享的，其中的 LiveData 并没有随着 FragmentA 的退出而清除，那么再次进入后，会自动走一遍 observe 回调，倒灌旧数据。
 
@@ -2458,6 +2470,32 @@ https://juejin.cn/post/6844904079265644551#comment
 设计理由：为了处理生命周期从 unActive 到 active 转变时，跟进“最新” 的状态
 
 解决：通过反射修改livedata源码observer.mLastVersion的值，使得if (observer.mLastVersion >= mVersion)成立，就不会导致没有注册观察者，还能接收到消息。
+
+## Lifecycle 
+
+管理（如 Activity 或 Fragment）的生命周期状态的信息，并允许其他对象观察此状态。
+
+> lifeCycle的原理是什么？如果在onStart里面订阅，会回调onCreate吗
+
+会
+
+http://liuwangshu.cn/application/jetpack/3-lifecycle-theory.html
+
+创建一个不可见的ReportFragment添加到Activity，然后分发生命周期到订阅的对象。实现LifecycleObserver接口的类中，注解修饰的方法和事件会被保存起来，然后在生命周期发生改变的时候再找到对应 Event 的方法，通过反射对事件的对应方法进行调用
+
+##DataBinding 
+
+优点
+
+* 不用再 findViewById 了(当然kotlin也可以不用喽)
+* 减少了 Avtivity和Fragment的逻辑处理，使Activity 和Fragment逻辑更加清晰，容易维护
+* 双向绑定，当View改变的时候会通知Model，当Model改变的时候会通知View
+
+缺点
+
+* 很难定位bug，当有个界面展示不对的时候，你不知道是View的问题，还是Model的问题，还是编写逻辑的问题，
+* xml中 不能Debug
+* 双向绑定技术，不利于View的复用，因为一个xml 里面绑定的一个Model，有可能另一个界面Model就不一样了，所以无法复用了。除非你再手动转一下这个Model
 
 # RecyclerView ok
 
