--- a/笔记/新.md
+++ b/笔记/新.md
@@ -552,7 +552,9 @@ HashMap的长度为2的幂次方的原因是为了减少Hash碰撞，尽量使Ha
 
 > HashMap为啥线程不安全
 
-当有多个线程共同操作hashMap的put方法时，这个时候hashMap容量不够了，两个线程都去扩容执行resize方法，在这个时候cpu切换资源的话，会造成链表成环问题，死循环问题。
+当有多个线程共同操作hashMap扩容插入元素操作时，在这个时候cpu切换资源的话，会造成链表成环问题，死循环问题。
+
+https://www.cnblogs.com/qmillet/p/13054208.html
 
 > HashMap 1.7和1.8区别 71 82
 
@@ -784,6 +786,13 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
    1. 可用内存小
 3. 标记-整理算法：标记过程与标记-清除算法一样，接下来让所有存活的对象都向一端移动，然后直接清理掉端边界以外的内存
    1. 仍需要进行局部对象移动，一定程度上降低了效率
+
+> 方法区1.7 1.8 区别
+
+在1.8中方法区是由元空间来实现的,常量池移到堆中，1.8不存在方法区,将方法区的实现给去掉了，而是在本地内存中,新加入元空间，
+元空间: 存储.class 信息, 类的信息,方法的定义,静态变量等.而常量池放到堆里存储
+
+
 
 #编译期注解处理的是字节码还是java文件 Ok
 
