--- a/笔记/新.md
+++ b/笔记/新.md
@@ -789,10 +789,8 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
 
 > 方法区1.7 1.8 区别
 
-在1.8中方法区是由元空间来实现的,常量池移到堆中，1.8不存在方法区,将方法区的实现给去掉了，而是在本地内存中,新加入元空间，
-元空间: 存储.class 信息, 类的信息,方法的定义,静态变量等.而常量池放到堆里存储
-
-
+在1.8中方法区是由元空间来实现的,常量池移到堆中，1.8不存在方法区,将方法区的实现给去掉了
+元空间: 存储.class 信息, 类的信息,方法的定义,静态变量等.而常量池放到堆里存储。元数据空间并不在虚拟机中，而是使用本地内存。
 
 #编译期注解处理的是字节码还是java文件 Ok
 
