--- a/笔记/新.md
+++ b/笔记/新.md
@@ -132,6 +132,14 @@ eg:ExecutorService executorService = Executors.newCachedThreadPool();
 
    ​	可以使用稍大的线程池，IO密集型任务CPU使用率并不高，因此可以让CPU在等待IO的时候去处理别的任务，充分利用CPU时间
 
+> 线程池优点
+
+线程池主要用作管理子线程，优点有：
+
+* 重用线程池中的线程，避免频繁创建和销毁线程所带来的内存开销。
+* 有效控制线程的最大并发数，避免因线程之间抢占资源而导致的阻塞现象。
+* 能够对线程进行简单的管理，提供定时执行以及指定时间间隔循环执行等功能
+
 
 ##如何让两个线程循环交替打印，线程间同步的方法
 
@@ -282,6 +290,15 @@ public static void main(String[] args) throws Exception {
     }
 ```
 
+## 线程的几种状态
+
+1. 新建状态：新创建一个线程对象。
+
+2. 就绪状态：线程对象创建后，调用start()方法。等待获取CPU的使用权。
+3. 运行状态：就绪状态的线程获取了CPU，执行程序代码。
+4. 阻塞状态：阻塞状态是线程因为某种原因放弃CPU使用权，暂时停止运行。直到线程进入就绪状态，才有机会转到运行状态
+5. 死亡状态：run方法执行结束
+
 #锁和并发 OK
 
 ##为什么多线程同时访问（读写）同个变量，会有并发问题？
@@ -427,7 +444,7 @@ volatile保证修饰的变量在多个线程中数据一致的效果，需从主
 
 3. volatile 不会造成线程的阻塞；synchronized 可能会造成线程的阻塞。
 
-4. volatile 标记的变量不会被编译器优化；synchronized标记的变量可以被编译器优化。
+4. volatile本质是在告诉jvm当前变量在寄存器中的值是不确定的,需要从主存中读取,synchronized则是锁定当前变量,只有当前线程可以访问该变量,其他线程被阻塞住
 
 > volatitle原理
 
@@ -719,12 +736,8 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
 3. 如果顶层 ClassLoader找到了该Class，就会直接返回
 4. 如果没找到，则继续依次向下查找，如果还没找到则最后会交由自身去查找
 
-双亲委托模式的优点就是：能有有效的确保一个类的全局唯一性
-
 为什么使用双亲委托机制？
-
-避免重复加载，如果已经加载过一次Class，就不需要再次加载，而是先从缓存中直接读取。
-安全方面的考虑，如果不使用双亲委托模式，就可以自定义一个String类来替代系统的String类，这样便会造成安全隐患，采用双亲委托模式会使得系统的String类在Java虚拟机启动时就被加载，也就无法自定义String类来替代系统的String类。
+能有有效的确保一个类的全局唯一性
 
 由不同的类加载器加载的类会被JVM当成同一个类吗？
 不会。
@@ -842,7 +855,7 @@ public class Singleton {
     }
 }
 为啥加volatile，禁止指令重排序
-1.给instance分配内存；2.调用 Singleton 的构造函数来初始化成员变量3.将 singleton 对象指向分配的内存空间，所以这个时候instance就不为null了
+1.分配内存空间；2.初始化对象3. 将singleton对象指向分配的空间，所以这个时候instance就不为null了
 如果虚拟机存在指令重排序优化，则步骤2和3的顺序是无法确定的。如果A线程率先进入同步代码块并先执行了3而没有执行2，此时因为singleton已经非null。这时候线程B，判断singleton非null并将其返回使用，因为此时Singleton实际上还未初始化，自然就会出错
 
 饿汉：
@@ -1248,7 +1261,7 @@ https://juejin.cn/post/6844904116561379341#comment
 
 1. startActivity()函数最终是由Instrumentation通过Binder机制发送消息给 system_server 进程（发生在Launcher进程）。在 system_server 中，启动进程的操作由AMS通过 socket 通信告知 Zygote 进程 fork 子进程
 2. app 进程启动后，首先是实例化 ActivityThread，并执行其main()函数：创建 ApplicationThread，Looper，Handler 对象，并开启主线程消息循环Looper.loop()。
-3. 创建并初始化 Application和Activity。ActivityThread的main()调用 ActivityThread#attach(false)方法进行 Binder 通信，通知system_server进程执行AMS#attachApplication(mAppThread)方法，用于初始化Application和Activity。在system_server进程中，AMS#attachApplication(mAppThread)里依次初始化了Application和Activity，分别有2个关键函数：
+3. ActivityThread的main()调用 attach(false)方执行AMS#attachApplication(mAppThread)方法，用于初始化Application和Activity。在system_server进程中，AMS#attachApplication(mAppThread)里依次初始化了Application和Activity，分别有2个关键函数：
    1. thread#bindApplication()方法通知主线程Handler 创建 Application 对象、绑定 Context 、执行 Application#onCreate() 生命周期；
    2. mStackSupervisor#attachApplicationLocked()方法中调用 ActivityThread#ApplicationThread#scheduleLaunchActivity()方法，进而通过主线程Handler消息通知创建 Activity 对象，然后再调用 mInstrumentation#callActivityOnCreate()执行 Activity#onCreate() 生命周期
 
@@ -1295,14 +1308,12 @@ init进程是Android系统中用户空间的第一个进程，是所有用户进
 
 > 概念
 
-长期运行在后台的服务，Service是在main Thread中执行，Service中不能执行耗时操作
+长期运行在后台的任务，Service是在main Thread中执行，Service中不能执行耗时操作
 
 两种启动方式：
 
 1. 通过startService启动后，service会一直无限期运行下去，只有外部调用了stopService()或stopSelf()方法时，该Service才会停止运行并销毁。
 2. bind service
-
-service是运行在主线程的，所以不能执行耗时的操作
 
 > onStartCommand返回值
 
