--- a/笔记/新.md
+++ b/笔记/新.md
@@ -1407,7 +1407,7 @@ View事件分发是通过遍历view树，将MotionEvent分发给最终View的过
 - Activity/View：拥有分发和消费两个方法。
 - ViewGroup：拥有分发、拦截和消费三个方法。
 
-一些重要的结论：
+一些重要的结论：|
 
 1、事件传递优先级：onTouchListener.onTouch > onTouchEvent > onClickListener.onClick。
 
