--- a/笔记/新.md
+++ b/笔记/新.md
@@ -494,6 +494,18 @@ SharedPreferences不支持多个进程同时写，会有一定的几率丢失数
 1. 分担主进程的内存压力，并且获取更大的内存空间
 2. 防止进程被杀死
 
+## SP
+
+> SharedPreference的commit ，apply区别
+
+1. commit，apply存储过程是原子性
+2. commit方法有返回值，设置成功true，否则是false;apply没有返回值
+3. 值会覆盖；apply写入过程分两步，第一步先同步写入内存，第二部在异步写入物理磁盘。并且写入的过程会阻塞同一个SharedPreferences对象的其他写入操作
+
+如果不关心设置成功与否，并且是在主线程设置值，建议用apply方法
+
+commit相对与apply效率较低，commit直接是向物理介质写入内容，而apply是先同步将内容提交到内存，然后在异步的向物理介质写入内容
+
 #HashMap的原理 ok 
 
 hashmap内部结构是由在数组+链表实现的，其中数组是Node[]数组，存放的是key-value键值对的节点，默认初始长度是16，当链表大于8并且数组长度大于 64 时，链表结构会转换成红黑树结构。之所以添加红黑树是因为一旦链表过长，会严重影响 HashMap 的性能，而红黑树具有快速增删改查的特点，这样就可以有效的解决链表过长时操作比较慢的问题，hashmap key,value均可为null(TreeMap不支持null键，但是支持null值)
@@ -1078,6 +1090,10 @@ eg:ListView/RecyclerView的Adapter的notifyDataSetChanged方法、广播
   
 * 虚引用：虚引用随时都可能被垃圾回收器回收。
 
+> Android中如何查看一个对象的回收情况
+
+Java提供ReferenceQueue来处理引用对象的回收情况。当SoftReference所引用的对象被GC后，JVM会先将softReference对象添加到ReferenceQueue这个队列中。当我们调用ReferenceQueue的poll()方法，如果这个队列中不是空队列，那么将返回并移除前面添加的那个Reference对象。
+
 ---
 
 #activity ok
@@ -1335,6 +1351,10 @@ intentService是个抽象类，继承service。特点是可以异步运行一个
 > HandlerThread
 
 `HandlerThread`继承Thread，内置了Handler和Looper，在run方法中创建了looper对象，这也是为什么在IntentService中能在HandlerThread中直接用handler的原因。
+
+> 多个Activity共同bind一个service，一个Activity destory，问service的情况
+
+不同于startService启动的服务默认无限期执行（可以通过Context的stopService或Service的stopSelf方法停止运行），bindService启动的服务的生命周期与其绑定的client息息相关。当client销毁的时候，client会自动与Service解除绑定，当然client也可以通过明确调用Context的unbindService方法与Service解除绑定。当没有任何client与Service绑定的时候，Service会自行销毁（通过startService启动的除外）。 ???
 
 # ANR怎么产生?怎么捕捉？
 
@@ -2174,6 +2194,13 @@ lib,dex,res占用了超90%的空间，这三个是优化的重点
 4. 将帧动画转为lottie动画，因为帧动画贼占资源（Lottie 是 Airbnb 开源的一套跨平台的动画效果解决方案,通过AE导出的JSON文件+Lottie库可快速实现复杂的动画）
 5. 通过分离应用中比较独立的模块，然后以插件的形式进行加载
 6. 随着资源的增加R.class也会变大，代码中访问资源是通过R.xx.xx，而R.xx.xx对应的是.arsc中一个常量值。因此可以通过使用ID替换R.xx.xx，这样R.class文件就没有作用了，然后可以删除。工具（https://github.com/meili/ThinRPlugin）
+
+
+
+* 使用AAPT把资源打到APK包里
+* resources.arsc文件最好不要压缩存储，如果压缩会影响一定的性能
+* usage.txt  列出从APK移除的代码 seeds.txt  列出未进行混淆的类和成员
+* `minSdkVersion`高于14（`Android 4.0+`）的话，可以选用WebP格式
 
 ## 内存优化
 
