--- a/笔记/新.md
+++ b/笔记/新.md
@@ -745,14 +745,13 @@ JVM把Class文件中的类数据加载到内存，并对数据进行校验解析
 
 > Person p = new Person() 实例化过程
 
-1.JVM会读取指定的路径下的person.class文件，并加载进内存。并会先加载person的父类（如果有直接父类的情况下）
+1.JVM读取class文件，加载进内存。如果有直接父类的情况下会先加载person的父类
 2.在堆内存中开辟空间，分配地址
-3.并在对象的空间中，对对象的属性进行默认初始化。
-4.调用对应的构造函数进行初始化
-5.在构造函数中，第一行会先到调用父类中构造函数进行初始化，在子类的构造函数中一定有一个super()，调用父类的默认无参数的构造函数。如果父类有形参的构造函数，也可以使用super(2)进行调用有参的构造函数。
-6.父类初始化完毕以后，再对子类的属性进行显示初始化。在初始化父类的成员变量时，子类的成员变量并未进行显示初始化。
+3.在对象的空间中，对对象的属性进行默认初始化。
+4.构造函数进行初始化。会先初始化父类构造
+6.父类初始化完毕以后，再对子类的属性进行显示初始化。
 7.在进行子类构造函数的特定初始化，此时，初始化子类的成员变量，局部代码块，然后继续执行子类的构造函数。
-初始化完毕以后，将地址赋值给引用变量。
+8.初始化完毕以后，将地址赋值给引用变量。
 
 > 什么时候被加载
 
