--- a/笔记/新.md
+++ b/笔记/新.md
@@ -1482,6 +1482,22 @@ init进程是Android系统中用户空间的第一个进程，是所有用户进
 * ServiceManager不能保证在zygote起来的时候已经初始化好，所以无法使用Binder。
 * Binder工作依赖于多线程，但是fork的时候是不允许存在多线程的，多线程情况下进程fork容易造成死锁，所以就不用Binder了
 
+https://www.jianshu.com/p/501690f88f68
+
+https://www.jianshu.com/p/e0126a4f9874
+
+https://zhuanlan.zhihu.com/p/86266649
+
+https://juejin.cn/post/6939682317845659662
+
+https://juejin.cn/post/6938982514648154148
+
+https://juejin.cn/post/6938315399184252959#heading-13
+
+https://github.com/JsonChao/Awesome-Android-Interview/blob/master/Android%E7%9B%B8%E5%85%B3/Android%E9%AB%98%E7%BA%A7%E9%9D%A2%E8%AF%95%E9%A2%98.md
+
+
+
 ##APP打包经过了哪几个流程
 
 - 打包资源文件，通过AAPT(Android Asset Packaging Tool)打包成R.java类(资源索引表)以及.arsc资源文件。
@@ -1491,6 +1507,58 @@ init进程是Android系统中用户空间的第一个进程，是所有用户进
 - 生成未签名的apk，包括apkbuilder工具将所有没有编译的资源、.arsc资源、.dex文件打包到一个完成apk文件中
 - 生成签名的apk，包括jarsigner工具对未签名的apk验证签名。得到一个签名后的apk（signed.apk）
 - zipAlign工具对齐上面签名的apk文件。
+
+# Binder机制 ok
+
+Android Binder通信步骤：1.注册服务。2.请求服务。3.传输数据。
+
+> Binder框架
+
+Binder框架 是基于 C/S 架构的。由Client、Server、ServiceManager、Binder驱动组成，其中 Client、Server、Service Manager 运行在用户空间，Binder 驱动运行在内核空间。如下图所示：
+
+![Binder框架中个组件.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E6%A1%86%E6%9E%B6%E4%B8%AD%E4%B8%AA%E7%BB%84%E4%BB%B6.jpg?raw=true)
+
+Server通过Binder驱动在ServiceManager中注册服务 ,Client通过Bindr驱动查询ServiceManager中注册的服务 ,ServiceManager通过Binder驱动返回Server的代理对象 ,Client拿到Server端的代理对象就可以进行进程间通讯了,Client和Server是开发者自己来实现，Binder驱动和ServiceManager是系统提供的。
+
+在Android中client不是直接去和binder打交道，client直接和Manager交互，而manager和managerProxy交互，也就是说client是通过managerProxy去和binder进行交互的。同时service也不是直接和binder交互，而是通过stub去和binder交互。
+
+Linux系统将一个进程分为用户空间和内核空间。对于进程之间来说，用户空间的数据不可共享，内核空间的数据可共享，为了保证安全性和独立性，一个进程不能直接操作或者访问另一个进程，即Android的进程是相互独立、隔离的，这就需要跨进程之间的数据通信方式。
+
+> 一次完整的 Binder IPC 通信过程通常是这样：
+
+Binder IPC机制是基于内存映射（mmap）来实现的，传统的进程通信需要两次拷贝，bander只需要一次拷贝。
+
+1. 首先 Binder 驱动在内核空间创建一个数据接收缓存区； 
+2. 接着在内核空间开辟一块内核缓存区，建立内核缓存区和内核中数据接收缓存区之间的映射关系，以及内核中数据接收缓存区和接收进程用户空间地址的映射关系； 
+3. 发送方进程通过系统调用 copyfromuser() 将数据 copy 到内核中的内核缓存区，由于内核缓存区和接收进程的用户空间存在内存映射，因此也就相当于把数据发送到了接收进程的用户空间，这样便完成了一次进程间的通信。 如下图：
+
+![Binder通信流程.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E9%80%9A%E4%BF%A1%E6%B5%81%E7%A8%8B.jpg?raw=true)
+
+##binder是cs架构，Server端的binder都是运行在同一个线程里面么
+
+不是。在 Zygote fork 之初就为它新建了一个 Binder 主线程，使得 APP 端也可以作为 Binder 的服务端，这个时候 Binder 线程的数量就只有一个，假设我们的 APP 自身实现了很多的 Binder 服务，这时候Binder 驱动会根据目标进程中是否存在足够多的Binder 线程来告诉进程是不是要新建 Binder 线程
+
+Binder 的线程池数量默认是15个，由15个线程共享这 1MB-8KB 的内存空间
+
+服务可分为系统服务与普通服务，系统服务一般是在系统启动的时候，由 SystemServer 进程创建并注册到ServiceManager中的。而普通服务一般是通过 ActivityManagerService 启动的服务，或者说通过四大组件中的Service 组件启动的服务
+
+> bindService 启动 Service 与 Binder 服务实体的流程
+
+1. Activity 调用bindService：通过 Binder 通知 ActivityManagerService，要启动哪个 Service
+2. ActivityManagerService 创建 ServiceRecord，并利用 ApplicationThreadProxy 回调，通知 APP 新建并启动Service启动起来
+3. ActivityManagerService 把 Service 启动起来后，继续通过  ApplicationThreadProxy，通知 APP，bindService，其实就是让 Service 返回一个 Binder 对象给  ActivityManagerService，以便 AMS 传递给 Client
+4. ActivityManagerService 把从 Service 处得到这个 Binder 对象传给 Activity，这里是通过 IServiceConnection binder 实现。
+5. Activity 被唤醒后通过 Binder Stub 的 asInterface 函数将 Binder 转换为代理 Proxy，完成业务代理的转换，之后就能利用 Proxy 进行通信了
+
+> AMS 和 APP通信
+
+ApplicationThread实现了Stub,其实就是一个Binder，APP进程创建之后会把自己进程的ApplicationThread的代理端送给AMS服务。AMS服务中保存了所有应用进程的ApplicationThread的代理对象。这样也就可以通信了
+
+![AMS 和 APP 的通信.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/AMS%20%E5%92%8C%20APP%20%E7%9A%84%E9%80%9A%E4%BF%A1.png?raw=true)
+
+
+
+# 
 
 # Service Ok
 
@@ -2116,50 +2184,6 @@ Handler是怎么获取到当前线程的Looper的
 > Handler缓存池大小
 
 50
-
-# Binder机制 ok
-
-Android Binder通信步骤：1.注册服务。2.请求服务。3.传输数据。
-
-> Binder框架
-
-Binder框架 是基于 C/S 架构的。由Client、Server、ServiceManager、Binder驱动组成，其中 Client、Server、Service Manager 运行在用户空间，Binder 驱动运行在内核空间。如下图所示：
-
-![Binder框架中个组件.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E6%A1%86%E6%9E%B6%E4%B8%AD%E4%B8%AA%E7%BB%84%E4%BB%B6.jpg?raw=true)
-
-Server通过Binder驱动在ServiceManager中注册服务 ,Client通过Bindr驱动查询ServiceManager中注册的服务 ,ServiceManager通过Binder驱动返回Server的代理对象 ,Client拿到Server端的代理对象就可以进行进程间通讯了,Client和Server是开发者自己来实现，Binder驱动和ServiceManager是系统提供的。
-
-在Android中client不是直接去和binder打交道，client直接和Manager交互，而manager和managerProxy交互，也就是说client是通过managerProxy去和binder进行交互的。同时service也不是直接和binder交互，而是通过stub去和binder交互。
-
-Linux系统将一个进程分为用户空间和内核空间。对于进程之间来说，用户空间的数据不可共享，内核空间的数据可共享，为了保证安全性和独立性，一个进程不能直接操作或者访问另一个进程，即Android的进程是相互独立、隔离的，这就需要跨进程之间的数据通信方式。
-
-> 一次完整的 Binder IPC 通信过程通常是这样：
-
-Binder IPC机制是基于内存映射（mmap）来实现的，传统的进程通信需要两次拷贝，bander只需要一次拷贝。
-
-1. 首先 Binder 驱动在内核空间创建一个数据接收缓存区； 
-2. 接着在内核空间开辟一块内核缓存区，建立内核缓存区和内核中数据接收缓存区之间的映射关系，以及内核中数据接收缓存区和接收进程用户空间地址的映射关系； 
-3. 发送方进程通过系统调用 copyfromuser() 将数据 copy 到内核中的内核缓存区，由于内核缓存区和接收进程的用户空间存在内存映射，因此也就相当于把数据发送到了接收进程的用户空间，这样便完成了一次进程间的通信。 如下图：
-
-![Binder通信流程.jpg](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Binder%E9%80%9A%E4%BF%A1%E6%B5%81%E7%A8%8B.jpg?raw=true)
-
-##binder是cs架构，Server端的binder都是运行在同一个线程里面么
-
-不是。在 Zygote fork 之初就为它新建了一个 Binder 主线程，使得 APP 端也可以作为 Binder 的服务端，这个时候 Binder 线程的数量就只有一个，假设我们的 APP 自身实现了很多的 Binder 服务，这时候Binder 驱动会根据目标进程中是否存在足够多的Binder 线程来告诉进程是不是要新建 Binder 线程
-
-Binder 的线程池数量默认是15个，由15个线程共享这 1MB-8KB 的内存空间
-
-服务可分为系统服务与普通服务，系统服务一般是在系统启动的时候，由 SystemServer 进程创建并注册到ServiceManager中的。而普通服务一般是通过 ActivityManagerService 启动的服务，或者说通过四大组件中的Service 组件启动的服务
-
-> bindService 启动 Service 与 Binder 服务实体的流程
-
-1. Activity 调用bindService：通过 Binder 通知 ActivityManagerService，要启动哪个 Service
-2. ActivityManagerService 创建 ServiceRecord，并利用 ApplicationThreadProxy 回调，通知 APP 新建并启动Service启动起来
-3. ActivityManagerService 把 Service 启动起来后，继续通过  ApplicationThreadProxy，通知 APP，bindService，其实就是让 Service 返回一个 Binder 对象给  ActivityManagerService，以便 AMS 传递给 Client
-4. ActivityManagerService 把从 Service 处得到这个 Binder 对象传给 Activity，这里是通过 IServiceConnection binder 实现。
-5. Activity 被唤醒后通过 Binder Stub 的 asInterface 函数将 Binder 转换为代理 Proxy，完成业务代理的转换，之后就能利用 Proxy 进行通信了
-
-
 
 # Kotlin ok
 
@@ -3137,7 +3161,9 @@ HTTP缓存
 
 先获取本地缓存，然后通过CacheStrategy确定是进行网络请求还是使用缓存，如果既不使用缓存也不进行网络请求返回一个code为504的response，如果网络请求不可用而缓存可用则直接使用缓存，如果网络请求不可用缓存可用直接使用缓存，如果网络请求可用进行请求，请求后在判断有缓存并且响应码为304的话则更新缓存，否则在判断reponse能否缓存，可以的话则存储缓存，不可以的话则删除缓存
 
+![Http缓存流程.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Http%E7%BC%93%E5%AD%98%E6%B5%81%E7%A8%8B.png?raw=true)
 
+![Cache-Control取值.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/Cache-Control%E5%8F%96%E5%80%BC.png?raw=true)
 
 > 响应码
 
