--- a/笔记/新.md
+++ b/笔记/新.md
@@ -32,7 +32,7 @@ hashcode和equals的约定关系如下：
 
 在集合中，判断两个对象是否相等先判断hashcode再判断equals
 
-> string,equals,==有什么区别
+> string,equals,==有什么区别  qunimade
 
 ==比较的是两个对象的内存地址相不相同，相同则返回true。equals默认情况下是调用==，所以也是比较内存地址
 
