--- a/笔记/终.md
+++ b/笔记/终.md
@@ -1666,7 +1666,20 @@ Instrumentation的主要作用就是监控system对app的调用
 
 ActivityStack持有多个 TaskRecord，控制哪个是前台任务等等。TaskRecord 是我们说的任务栈的概念，栈内有很多 Activity，而 ActivityRecord 是记录 Activity 的结构体
 
-
+https://codetop.cc/#/home
+https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/
+https://leetcode-cn.com/problems/sum-lists-lcci/
+https://leetcode-cn.com/problems/spiral-matrix/
+https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/hua-dong-chuang-kou-by-powcai/
+https://leetcode-cn.com/problems/binary-tree-level-order-traversal/solution/er-cha-shu-de-ceng-xu-bian-li-by-leetcode-solution/
+https://leetcode-cn.com/problems/binary-tree-right-side-view/solution/er-cha-shu-de-you-shi-tu-by-leetcode-solution/
+https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/
+https://juejin.cn/post/6876968255597051917  补间动画与属性动画的区别，哪个效率更高
+https://blog.csdn.net/qq_23012315/article/details/82492165
+https://juejin.cn/post/6898145227765186567
+https://blog.csdn.net/u012845311/article/details/73379573
+https://blog.csdn.net/c10WTiybQ1Ye3/article/details/87310486
+https://juejin.cn/post/6844903498329358349
 
 
 
