--- a/笔记/终.md
+++ b/笔记/终.md
@@ -3330,7 +3330,7 @@ https://mrfzh.github.io/2019/07/19/okhttp3%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90%E
 
 连接池最大连接数5，默认keep-alive的时间是5分钟
 
-连接池在RetorfitClient初始化的时候会创建，清理操作是第一次put操作的时候开启，清除操作是个无限循环，在没有需要清理的连接时会退出
+连接池在RetorfitClient初始化的时候会创建，put时先清理操作再put新连接到队列，清除操作是个无限循环，在没有需要清理的连接时会退出
 
 连接池通过双端队列(前后都支持插入和删除操作的队列)去存取连接，并使用一个定时任务定期清理无用连接
 
@@ -3342,7 +3342,11 @@ https://mrfzh.github.io/2019/07/19/okhttp3%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90%E
    3. 如果不存在空闲连接，只有正在使用的连接，不移除连接，5分钟后再清理
    4. 如果没有任何连接，说明清除任务完成，线程执行完毕
 
-HTTP复用连接： http://www.heqiangfly.com/2019/10/15/open-source-okhttp-connect-pool/ https://my.oschina.net/u/4334316/blog/4457381 https://www.shuzhiduo.com/A/Vx5Mwy6LzN/
+唤醒：
+
+1.超时时间到
+
+HTTP复用连接： 
 
 向服务器发起请求时，header 部分如果有 Connection: keep-alive，表示客户端和服务器之间保存长连接，这个连接是可以复用的。长连接在 HTTP/1.1 中默认开启。
 
