--- a/笔记/终.md
+++ b/笔记/终.md
@@ -2491,7 +2491,7 @@ x轴为调用的时间线，越宽的表示耗时越久，y轴为调用的深度
 
 1. 将两处onCreate()中的初始化操作异步初始化
 
-2. 在Application的attachBaseContext中将SplashActivity和MainActivity预加载
+2. 在Application的attachBaseContext中将SplashActivity和MainActivity预加载(对象第一次创建的时候，JVM首先检查对应的Class对象是否已经加载。如果没有加载，JVM会根据类名查找.class文件，将其Class对象载入。同一个类第二次new的时候就不需要加载类对象，而是直接实例化，创建时间就缩短了)
 
 3. Splash设置主题背景，解决白屏问题，这一步做了之后，对整体启动时间并没有任何的减少，只是说给用户的体验要友好很多，不再显示一个突兀的白屏
 
@@ -2508,23 +2508,67 @@ x轴为调用的时间线，越宽的表示耗时越久，y轴为调用的深度
 
 > 自定义启动器
 
-对application的oncreate里面初始化的第三方依赖异步初始化，有两个问题：
+对application的oncreate里面初始化的第三方依赖分成子任务异步初始化，需要解决两个问题：
 
-1. 如果两个异步之间执行的内容有着依赖关系
-2. 如果其中一个异步处理，需要先执行完毕自己，主线程才能继续往下执行，那么常规方式也不好处理
+1. 如果两个子任务之间存在顺序
+2. 如果子任务和主线程之间存在顺序
 
-//不要写死线程池，那并不是最优解
-// 设置线程池的核心线程数2-4之间,但是取决于CPU核数
-private static final int CORE_POOL_SIZE = Math.max(2, Math.min(CPU_COUNT - 1, 4));
+启动器原理
 
+* task 
 
+    首先是将我们的耗时操作均封装成一个task，它有4个方法1个属性
+    
+    属性1 ：CountDownLatch，该task有几把锁尼，取决于它的依赖的task集合数。
+    方法1 ：dependsOn（）返回它所依赖的task集合
+    方法2 ：startLock（）开启锁
+    方法3 ：unlock（）执行完一个依赖，减少一把锁
+    方法4 ：needWait() 是否需要主线程等你执行完再执行
 
-CountDownLatch
+* 启动器（TaskDispatcher）
 
+```
+启动器主要是用来分发task的
+mCountDownLatch 锁，不同于task里的锁，这个锁是锁主线程的，当主线程调用它时，它会锁定，锁的数量取决于等待集合的数量 
+
+addTask: 将task添加至集合中，并以需要依赖的对象为key，集合为value创建一个Map，这个Map主要是当一个task运行完毕，就可以循环这个Map找到这个运行完毕的task，获取到需要依赖它的对象集合，然后让每一个对象，均减少一把锁。然后调用这个task的needWait()方法，看看是否需要主线程等待它，如果需要，加入等待集合（mNeedWaitTasks）中
+
+startTask：分发task，首先是根据有向无环图的拓扑排序，将task集合重新排序，比如，我们传入的任务是A，B，C，如果A依赖于B，那么就需要先初始化B，同时处理C，然后再处理A。返回就是B、C、A。设置主线程的锁，锁的数量就是等待集合（mNeedWaitTasks）的数量，保证一些要切换页面之前必须要执行完的task均执行完。然后根据所要求的线程进行分发处理。
+```
+
+* 执行器（DispatchRunnable）
+
+```
+执行器主要就是为了执行task的，它继承了Runnablerun(): 
+先等待上层任务执行完，然后再执行自身。当完成一个任务之后，通知所有下层任务，并解锁他们
+```
+
+* 线程池
+
+```
+这里启动了两个线程池，CPU密集型和IO密集型，CPU密集使用自定义ThreadPoolExecutor，核心线程数=总线程数=Math.max(2, Math.min(CPU_COUNT - 1, 5))，超时5秒，任务队列LinkedBlockingQueue因为占据CPU的时间片过多的话会影响性能，所以这里控制了最大并发，防止主线程的时间片减少；IO密集型使用newCachedThreadPool，有好多任务其实占用的CPU time非常少，所以使用缓存线程池,基本上来着不拒
+```
+
+* CountDownLatch 
+
+```
 在构造CountDownLatch的时候传入一个整数n，在这个整数“倒数”到0之前，主线程需要等待在门口，而这个“倒数”过程则是由各个执行线程驱动的，每个线程执行完一个任务“倒数”一次。总结来说，CountDownLatch的作用就是等待其他的线程都执行完任务，然后主线程才继续往下执行。
 CountDownLatch主要有两个方法：countDown()和await()。
 
 countDown()方法用于使计数器减一，其一般是执行任务的线程调用，await()方法则使调用该方法的线程处于等待状态，其一般是主线程调用。这里需要注意的是，countDown()方法并没有规定一个线程只能调用一次，当同一个线程调用多次countDown()方法时，每次都会使计数器减一；另外，await()方法也并没有规定只能有一个线程执行该方法，如果多个线程同时执行await()方法，那么这几个线程都将处于等待状态，并且以共享模式享有同一个锁
+
+CountDownLatch内部通过AQS实现。在创建CountDownLatch实例时，需要传递一个int型的参数：count，该参数为计数器的初始值，也可以理解为该共享锁可以获取的总次数。
+
+当线程调用await()方法，首先判断count的值是否为0，如果不会0的话则会阻塞当前线程，并让当前线程进入AQS的同步队列中排队一直等待直到为0为止。
+
+当线程调用countDown()方法时，通过自旋+CAS使count值 – 1。然后判断state是否等于0。等于0的时候返回true，就会去唤醒正在同步队列中排队等待的线程，先唤醒排在最前面的那个线程。由于是共享模式，那个线程被唤醒后，检查state=0了，就结束阻塞，并且会通知下一个排队线程，下一个线程醒来后，一样判断state是否等于0了，然后结束阻塞，通知下一个，一直循环下去，直到所有阻塞中的线程全部被唤醒。
+
+当在创建CountDownLatch时初始化的count参数，必须要有count线程调用countDown方法才会使计数器count等于0，锁才会释放，前面等待的线程才会继续运行。注意CountDownLatch不能回滚重置。
+ 
+AQS是一种提供了原子式管理同步状态、阻塞和唤醒线程功能以及队列模型的简单框架
+```
+
+![启动优化_启动器.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/%E5%90%AF%E5%8A%A8%E4%BC%98%E5%8C%96_%E5%90%AF%E5%8A%A8%E5%99%A8.png?raw=true)
 
 ## 包大小优化
 
@@ -3422,6 +3466,8 @@ HTTP复用连接：
 向服务器发起请求时，header 部分如果有 Connection: keep-alive，表示客户端和服务器之间保存长连接，这个连接是可以复用的。长连接在 HTTP/1.1 中默认开启。
 
 连接的复用可以提高性能。没有连接复用的话，发起 http 请求时要先建立 TCP 连接，然后传递数据，最后再释放连接。如果同一个客户端在某段时间进行频繁的请求操作，这时频繁的创建和释放连接会导致性能低下。而如果可以连接复用，那么在 timeout 空闲时间内，连接不会关闭，这样就可以减少连接的创建和释放，大幅提高性能。
+
+![okhttp连接池.png](https://github.com/creativityingenuity/DayDayStudy/blob/master/%E7%AC%94%E8%AE%B0/%E5%9B%BE%E7%89%87/okhttp%E8%BF%9E%E6%8E%A5%E6%B1%A0.png?raw=true)
 
 >CacheInterceptor源码解读（继续背6）
 
